Revision history for Perl extension Carp::Always.

        - Change bugtracker to GitHub

0.13_01  Wed Aug 8 2018   TRIAL RELEASE
        - No code change
        - Fine-tuning of prereqs

        [thanks Shawn Carroll]
        - Test::Pod and Test::Pod::Coverage as author tests again
        - Added LICENSE file

0.13  Wed Nov 6 2012
        - Test::More and Test::Base go to TEST_REQUIRES
        - Test::Pod and Test::Pod::Coverage as author tests
          (solves RT#87423)

0.12  Tue Aug 21 2012
        - fix failing t/pod.t due to bad encoding (CPAN #77656)

0.11  Wed Apr 18 2011
        - fix test failure with Carp 1.25+ RT#75320 [thanks ANDK and greeneg]
        - Test::Base is required in BUILD (otherwise we haven't tested anything)

0.10  Fri Aug 19 2011
        - fix typo in POD RT#68793 (also reported by Kai Moonbourn)
        - Carp::Always ate part of errors like 'foo at bar' RT#57385
          (fix borrowed from Carp::Always::Color)
        - deal with non-string exceptions
          (borrowed from Carp::Always:Color as well)

0.09  Mon Jul 30 2007
        - no need for updating
        - lib/Carp/Indeed.pm was moved to the deprecate
          Carp-Indeed distribution

0.08  Tue Mar 20 2007
        - no need for updating
        - micro changes (POD, Makefile.PL, README)

0.07  Tue Oct 25 2006
        - no real change, no need to upgrade
        - added taint checking to tests, with shebang "#!perl -T\n"
        - Always.pm and Indeed.pm moved to lib/Carp/
        - "use strict" in Indeed.pm
        - $Carp::Indeed::VERSION = $Carp::Always::VERSION

0.06  Mon Jul 17 2006
        - Carp::Indeed was superseded by Carp::Always
        - now there is an END block
        - there is a test for POD coverage

0.05  Tue May 30 2006
        - remove @EXPORT_OK and all use of Exporter (which was good
          for nothing) - a suggestion by Yuval Kogman via CPAN ratings
        - simplified tests with Test::Base

0.04  Wed Oct 12 2005 (r198, tag)